# acoustimator

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CLAUDE.md  LICENSE  README.md  alembic.ini  pyproject.toml  vercel.json
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  claude-review.yml  e2e.yml  monthly_retrain.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_add_users_table.py
api/: requirements.txt
docs/: ANALYSIS.md  DATA_SCHEMA.md  REPO_STRUCTURE.md  ROADMAP.md  TECH_STACK.md
frontend/: auth.config.ts  auth.ts  package.json  playwright.config.ts  pnpm-lock.yaml
frontend/public/: manifest.json
frontend/scripts/: generate-icons.mjs
frontend/src/app/: globals.css  layout.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/estimates/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/projects/: page.tsx
frontend/src/app/settings/: page.tsx
frontend/src/components/: ThemeProvider.tsx
frontend/src/components/dashboard/: CostTrendChart.tsx  StatCard.tsx
frontend/src/components/estimates/: AdditionalItemsSection.tsx  BoardColumn.tsx  CatalogEntryModal.tsx  ComparableProjects.tsx  ConfidenceBadge.tsx  EstimateBoard.tsx  EstimateCard.tsx  EstimateSummary.tsx  EstimateTable.tsx  NotesThread.tsx  ScopeTypeBadge.tsx
frontend/src/components/layout/: MobileHeader.tsx  Sidebar.tsx  SidebarController.tsx
frontend/src/components/ui/: FilterSelect.tsx  ProjectTypeBadge.tsx  WaveformLoader.tsx
frontend/src/lib/: api.ts  mock-data.ts  types.ts  utils.ts
frontend/tests/e2e/: dashboard.spec.ts  estimate-detail.spec.ts  estimates.spec.ts  new-estimate.spec.ts  projects.spec.ts
scripts/: backfill_from_folder_names.py  backfill_quote_dates.py  classify_project_types.py  estimate_from_plans.py  extract_all.py  load_to_db.py  load_vendor_quotes.py  normalize_products.py  parse_quotes.py  parse_vendor_quotes.py  populate_project_types.py  price_index.py  quality_report.py  read_plans.py  reclassify_scopes.py  retrain_models.py  train_labor_model.py  train_markup_model.py  train_models.py  validate_extraction.py
src/: config.py
src/api/: .env.example  __init__.py  auth.py  dependencies.py  main.py
src/api/middleware/: __init__.py  api_key.py
src/api/routes/: __init__.py  admin.py  auth_verify.py  estimate_additional_items.py  estimate_notes.py  estimate_stream.py  estimates.py  exports.py  products.py  projects.py  stats.py  vendors.py
src/api/schemas/: __init__.py  admin.py  common.py  estimates.py  exports.py  projects.py
src/db/: loader.py  models.py  session.py
src/db/migrations/: add_actual_cost.sql  add_estimate_additional_items.sql  add_estimate_notes_table.sql  add_quotes_table.sql
src/enrichment/: __init__.py  price_indexer.py  product_normalizer.py  vendor_tracker.py
src/estimation/: __init__.py  catalog.py  comparator.py  confidence.py  estimator.py  excel_writer.py  models.py
src/extraction/: excel_parser.py  pdf_parser.py  plan_reader.py  validator.py  vendor_parser.py
src/extraction/plan_parser/: ceiling_extractor.py  models.py  page_classifier.py  room_extractor.py  scope_suggester.py  sf_estimator.py  text_extractor.py  vision_extractor.py  wall_extractor.py
src/models/: cost_model.py  features.py  labor_model.py  markup_model.py  retrainer.py
tests/: conftest.py
tests/fixtures/: seven_pines_plan_result.json
tests/test_api/: __init__.py  conftest.py  test_admin.py  test_auth_verify.py  test_estimates.py  test_estimates_pipeline.py  test_projects.py  test_stats.py  test_vendors.py
tests/test_enrichment/: test_product_normalizer.py
tests/test_estimation/: test_estimator.py  test_estimator_e2e.py
tests/test_extraction/: test_excel_parser.py  test_pdf_parser.py  test_plan_parser.py  test_plan_reader_e2e.py  test_validator.py  test_vendor_parser.py
(+7 files in other folders)
