[project]
name = "acoustimator"
version = "0.1.0"
description = "AI-powered estimation engine for Commercial Acoustics"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.40.0",
    "openpyxl>=3.1.0",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    "pymupdf>=1.27.2.2",
    "rapidfuzz>=3.14.3",
    "psycopg2-binary>=2.9.11",
    "scikit-learn>=1.8.0",
    "xgboost>=3.2.0",
    "pandas>=3.0.2",
    "numpy>=2.4.4",
    "joblib>=1.5.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
